--- a/query.html
+++ b/query.html
@@ -3,7 +3,7 @@
  <head>
    <meta charset="UTF-8">
   <title>Eleven</title>
-  <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+  <script src="https://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
   <script src="./content_script.js"></script>
  </head>
  <body onload="init()">
